--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "4.17.1",
+    "express-async-errors": "^3.1.1",
     "sequelize": "^6.3.4",
     "sqlite3": "^4.0.1"
   },
@@ -15,13 +16,13 @@
   },
   "devDependencies": {
     "concurrently": "4.1.0",
-    "nodemon": "1.19.1",
     "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-loopback": "^8.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^21.27.1",
     "eslint-plugin-prettier": "^3.0.0",
+    "nodemon": "1.19.1",
     "prettier": "1.14.3",
     "prettier-eslint": "^8.8.2"
   },
